services/pgadmin/envs/developer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pgadmin4
  name: pgadmin4
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin4

    spec:
      containers:
        - name: pgadmin4
          volumeMounts:
            - name: definitions
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
            - name: pgadmin-config-local
              mountPath: /pgadmin4/config_local.py
              subPath: config_local.py
              readOnly: true
            - name: opsbot-ca-cert
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: opsbot.pem
              readOnly: false
      volumes:
        - name: definitions
          secret:
            secretName: pgadmin4
            items:
              - key: servers.json
                path: servers.json
        - name: pgadmin-config-local
          configMap:
            name: pgadmin-config-local
            defaultMode: 256
        - name: opsbot-ca-cert
          configMap:
            name: opsbots-tls-ca
            defaultMode: 256
