services/pgadmin/envs/developer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: pgadmin4
  name: pgadmin4
spec:
  selector:
    app.kubernetes.io/name: pgadmin4
  type: NodePort
